# Video_processing

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  recognition.cpp  training.cpp
.cache/clangd/index/: camera.cpp.20592D1C25B7D02A.idx
